2013-02-24  Karl Berry  <karl@gnu.org>

	* tp/Makefile.am (install-exec-hook): rm old makeinfo,
	possibly a binary, before making the link.
	Report from Ken Moffat, 23 Feb 2013 21:31:33.

	* doc/texinfo.txi (Other Customization Variables): OPEN_ and
	CLOSE_QUOTE_SYMBOL now apply to Info too.
	(@t{@@code}): mention this.
	(@t{@@set @@value}): grudgingly mention that some non-alphanumerics
	sometimes work in @set names.

2013-02-24  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, tp/defs.in, tp/tests/*/*.sh,
	tp/tests/run_parser_all.sh:
	determine whether diff accepts -u and sets DIFF_U_OPTION to -u if so.
	Report that HP-UX diff do not accept -u from Richard Lloyd
	bug-texinfo, 19 Feb 2013 15:56:41.

2013-02-23  Patrice Dumas  <pertusus@free.fr>

	* tp/t/input_files/sample_utf8.texi: avoid having two nodes differing
	only in case, for case-sensitve filesystems.
	Report in http://savannah.gnu.org/bugs/?38380.
	* tp/Makefile.am, tp/maintain/*: modularize and rename scripts
	associated to standalone modules handling.
	* tp/Texinfo/Convert/Plaintext.pm: use OPEN_QUOTE_SYMBOL and 
	CLOSE_QUOTE_SYMBOL.
	* tp/Texinfo/Parser.pm: allow more characters in flags.
	do not close a line after a special command @set...

2013-02-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (@t{@@set @@value}): mention that @set
	need not appear at the beginning of a line.
	(@t{@@enumerate}, @t{@@itemize}): clarify that at least
	one @item should be inside @itemize.
	
	* README-hacking: include potential CPAN update in release checks.

2013-02-22  Antonio Diaz Diaz  <ant_diaz@teleline.es>  (tiny change)

	* info/filesys.c (compress_suffixes): Add .lz/lzip.
	* install-info/install-info.c (open_possibly_compressed_file):
	Add lzip support.
	* doc/info-stnd.texi,
	* doc/texinfo.txi: mention it.
	bug-texinfo, 22 Feb 2013 19:08:02.

2013-02-22  Eli Zaretskii  <eliz@gnu.org>

	* install-info/ginstall-info.exe.manifest: new file.
	* install-info/Makefile.am (dist_bin_SCRIPTS) [HOST_IS_WINDOWS]: