@@ -1,3 +1,8 @@
+2013-02-25  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/Texinfo/Parser.pm: use tell to find the position of the 
+	beginning of the line.
+
 2013-02-24  Karl Berry  <karl@gnu.org>
 
 	* tp/Makefile.am (install-exec-hook): rm old makeinfo,
